<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:layout_gravity="center"
        android:text="@string/printer_title" />
    
    <TableRow>
   <Button
        android:id="@+id/open"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_printer"
        android:textSize="10pt"        
    />   
        </TableRow>    
      <TableRow> 
     <TextView
        android:id="@+id/usb1"        
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="10pt"        
    />  
   <TextView
        android:id="@+id/usb2"        
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="10pt"        
    />  
  
     </TableRow>    
      <TableRow>    
    <Button
        android:id="@+id/printer01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usb_printer_1"
        android:textSize="10pt"  
    />
    
    <Button
        android:id="@+id/printer02"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usb_printer_2"
        android:textSize="10pt"        
    />  

    </TableRow>    
     <TableRow> 
     <TextView
        android:id="@+id/Null"        
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textSize="10pt"  
        />
     </TableRow>
  
        
    <TableRow>
    <Button
        android:id="@+id/close"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_printer"
        android:textSize="10pt"        
    />    
    </TableRow>

</TableLayout>